--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,21 +1,16 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
+
+@import url('./1-gallery.css');
 @import url('./vite-promo.css');
-@import url('./header.css');
+@import url('../../node_modules/simplelightbox/dist/simple-lightbox.min.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, Avenir, Helvetica, Montserrat, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
   color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #2E2F42CC(255, 255, 255, 0.87);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
