--- a/src/css/1-gallery.css
+++ b/src/css/1-gallery.css
@@ -40,3 +40,5 @@
         .sl-wrapper .sl-download{display:none;position:fixed;bottom:5px;width:100%;text-align:center;z-index:10060;color:#fff;font-size:1rem}
         .sl-wrapper .sl-download a{color:#fff}
         .sl-wrapper .sl-navigation{width:100%;display:none; color:	#FFFFFF}
+        .sl-wrapper .sl-download{display:none;position:fixed;bottom:5px;width:100%;text-align:center;z-index:10060;color:#fff;font-size:1rem}
+.sl-wrapper .sl-navigation{width:100%;display:none; color:	#FFFFFF}
